--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Murali Krishna
-# logo:
-description: Data Scientist
+# logo: /assets/img/headshot_circle.png
+#description: text below image
 show_downloads: true
-theme: jekyll-theme-minial
+theme: jekyll-theme-minimal
