--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Murali Krishna
-logo: /logo.jpeg
+logo: logo.jpeg
 description: Data Scientist
 show_downloads: true
 theme: jekyll-theme-minimal
